# splatad

./: README.md  pyproject.toml  setup.py
.github/workflows/: core_tests.yml
examples/: lidar_rendering.ipynb  rolling_shutter.ipynb
gsplat/: __init__.py  rendering.py
gsplat/cuda/: _torch_impl.py  _wrapper.py
gsplat/cuda/csrc/: bindings.h  ext.cpp  helpers.cuh  projection.cu  rasterization.cu  sh.cu  utils.cuh
gsplat/strategy/: default.py  ops.py
tests/: test_basic.py  test_rasterization.py  test_strategy.py
